v0.9.94
- Fixes to Registration report and formatting.

v0.9.93
- Fix for issue #10: https://github.com/UstadMobile/UMCloudDj-Code/issues/10
- Fix for issue #6: https://github.com/UstadMobile/UMCloudDj-Code/issues/6

v0.9.92
- Updated deployment script to set up the server to run under wsgi and apache2
- Fixed a bug in block upload when run under apache2.
- Fixed logging bug in assigned_courses
- Updated locust for student user case.

v0.9.8
- Updated CourseForm to account for correct pick list values when submitting form as well as making other fields un-mandatory. Fixes issue #4 https://github.com/UstadMobile/UMCloudDj-Code/issues/4
- Disabled link in picklist. Fixes enhancement issue #5 https://github.com/UstadMobile/UMCloudDj-Code/issues/5

v0.9.7
- Removed git_pull.sh (Will be auto generated from build script.
- Added exefile max_lenth to 500 (models)
- Updated Package models for tincanid field to have default value.
- Updated export for epub and elp 
- Tested.
- Bug fixes and made block export modular.
- Updated REAM ME script
- Added dist-upgrate to development script.
- Updated block upload script to export handle epub files as well.
- Updated export to export using exe's source that will get pulled and installed as per script.
- Testing exe command standalone

v0.9.6
- Fixed UMCloudDj issue #1 on spaces in usernames: https://github.com/UstadMobile/UMCloudDj-Code/issues/1
- Fixed issue #1
- Fixed issue #2 https://github.com/UstadMobile/UMCloudDj-Code/issues/2
- Fixed issue #3 for assigned_courses that returns 401 for unauthorised requests: https://github.com/UstadMobile/UMCloudDj-Code/issues/3
- Added 401 responses for other APIs


v0.9.5
- Fixed improper redirect in /signup/
- Spaces not allowed to be entered in html user create forms. 
- Updated lrs statement info models to account for timestamp of the original statement
- Performance upgrade to Usage reports. Statement Group Info objects now work with Statement Info directly improving performance. 